--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@ ol>li{
 ol>li:hover{
     color: red;
 }
+ol>li>a:hover{
+    color: red;
+}
 ul>li>a{
     font-size: 20px;
     font-family: cursive;
