--- a/stream/style.css
+++ b/stream/style.css
@@ -1,5 +1,6 @@
 body{
 	background: linear-gradient(to bottom, #6d7678, #e9eef0, #e9eef0, #e9eef0,white);
+	font-family: 'Amatic SC', cursive;
 }
 header, main, footer{
 	width: 1000px;
@@ -17,6 +18,12 @@ nav>a:hover{
 }
 .block{
 	height: 400px;
+}
+.w-65>h1{
+	font-size: 2.5rem;
+}
+.w-65>h2{
+	font-size: 2rem;
 }
 .w-35{
 	width: 35%;
@@ -41,22 +48,23 @@ input[type=number]{
 	border: 0;
 	color: white;
 	border-radius: 8px;
-	font-size: 1rem;
+	font-size: 1.2rem;
 	font-weight: 600;
 }
 .photo{
-	width: 90%;
+	width: 80%;
+	margin-left: 10%;
 }
 .vstavka{
 	margin: 50px 0 100px;
 	font-size: 4rem;
-	color: white;
+	color: navy;
 }
 footer{
 	padding: 10px;
 	background: gray;
 	color: white;
-	font-size: 1.4rem;
+	font-size: 1.2rem;
 	height: 30px;
 }
 .w-33{
