--- a/t21/style.css
+++ b/t21/style.css
@@ -1,12 +1,23 @@
 body{background: blue; color:white; font-family: cursive; margin:0;}
 input{padding: 5px;}
 
-input:invalid{background: red;}
+input:invalid{background: #ff2e2e;}
 input:valid{background: #1df000;}
-input:focus{border:3px solid green; border-radius: 4px;}
+input:focus{
+	border:3px solid lime; 
+	border-radius: 4px;}
 
 header{background: linear-gradient(to right,whitesmoke,white,blue);padding: 10px;}
 .button1,.button2{margin-left: 10px;text-decoration: none;}
 .button1:hover,.button2:hover{color:red;}
 .button2{margin-left: 10px;}
-input[type="submit"]{padding: 12px; color:white;font-family:cursive;background: linear-gradient(to right,purple,red);border:none;}
+input[type=submit]{
+	padding: 12px; 
+	color:white;
+	font-family:cursive;
+	background: linear-gradient(to right,purple,red);
+	border:none;}
+	
+input[type=submit]:hover{
+	background: linear-gradient(to right,red,purple);
+}
