--- a/html-css/t21/style.css
+++ b/html-css/t21/style.css
@@ -1,4 +1,4 @@
-body{background: blue; color:white; font-family: cursive; margin:0;}
+body{background: blue; color:white; font-family: cursive; margin:0; padding: 0 30px;}
 input{padding: 5px;}
 
 input:invalid{background: #ff2e2e;}
