--- a/html-css/t21/style.css
+++ b/html-css/t21/style.css
@@ -1,5 +1,7 @@
-body{background: blue; color:white; font-family: cursive; margin:0; padding: 0 30px;}
+body{background: blue; color:white; font-family: cursive; margin:0;}
+main{padding: 0 30px;}
 input{padding: 5px;}
+
 
 input:invalid{background: #ff2e2e;}
 input:valid{background: #1df000;}
