--- a/html-css/t21/style.css
+++ b/html-css/t21/style.css
@@ -1,5 +1,5 @@
-body{background: blue; color:white; font-family: cursive; margin:0;}
-main{padding: 0 30px;}
+body{color:white; font-family: cursive; margin:0;}
+main{padding: 0 30px;background-image: radial-gradient(ellipse,#2A308B,#000 62%)!important;}
 input{padding: 5px;}
 
 
@@ -9,7 +9,7 @@ input:focus{
 	border:3px solid lime; 
 	border-radius: 4px;}
 
-header{background-image: radial-gradient(ellipse,#2A308B,#000 62%)!important;padding: 10px;}
+header{background: linear-gradient(to right, white, white, blue);padding: 10px;}
 .button1,.button2{margin-left: 10px;text-decoration: none;}
 .button1:hover,.button2:hover{color:red;}
 .button2{margin-left: 10px;}
