--- a/html-css/t21/style.css
+++ b/html-css/t21/style.css
@@ -1,5 +1,5 @@
-body{color:white; font-family: cursive; margin:0;}
-main{padding: 0 30px;background-image: radial-gradient(ellipse,#2A308B,#000 62%)!important;}
+body{background-image: radial-gradient(ellipse,#2A308B,#000 62%)!important;color:white; font-family: cursive; margin:0;}
+main{padding: 0 30px;+}
 input{padding: 5px;}
 
 
