--- a/html-css/t21/style.css
+++ b/html-css/t21/style.css
@@ -1,4 +1,4 @@
-body{background-image: radial-gradient(ellipse,#2A308B,#000 62%)!important;color:white; font-family: cursive; margin:0;}
+body{background-image: radial-gradient(ellipse,#2A308B,#000 62%)!important;color:white; font-family: cursive; margin:0;min-height: 100vh}
 main{padding: 0 30px;}
 input{padding: 5px;}
 
