--- a/html-css/t21/style.css
+++ b/html-css/t21/style.css
@@ -9,7 +9,7 @@ input:focus{
 	border:3px solid lime; 
 	border-radius: 4px;}
 
-header{background: linear-gradient(to right, white, white, blue);padding: 10px;}
+header{background: linear-gradient(to right, white, white, #2A308B);padding: 10px;}
 .button1,.button2{margin-left: 10px;text-decoration: none;}
 .button1:hover,.button2:hover{color:red;}
 .button2{margin-left: 10px;}
