--- a/js_2/kursach3/styles/login.css
+++ b/js_2/kursach3/styles/login.css
@@ -1,5 +1,6 @@
 .login_header{
-    height: 400px;
+    min-height: 50vh;
+    margin-top: 30px;
 }
 .login_header h1{
     font-size: 1.5rem;
@@ -11,4 +12,7 @@
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
     padding-left: 50px;
     padding-right: 50px;
+}
+.sign-in-form{
+    margin-top: 40px;
 }
