--- a/html-css/t29/style.css
+++ b/html-css/t29/style.css
@@ -20,7 +20,7 @@ body{
     text-decoration: none;
     color: black;
     font-size: 12px;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: sans-serif;
     text-transform: uppercase;
     margin-right: 30px;
     font-weight: bold;
