--- a/js_2/kursach3/templates/productCard.html
+++ b/js_2/kursach3/templates/productCard.html
@@ -12,7 +12,10 @@
             <button class="btn btn-danger btn-sm" @click="deleteProduct(product.id)">
                 Delete
             </button>
-            <button class="btn btn-primary btn-sm px-3">
+            <button 
+                class="btn btn-primary btn-sm px-3" 
+                @click="editProduct(product.id)" 
+                data-bs-toggle="modal" data-bs-target="#editModal">
                 Edit
             </button>
         </p>
