--- a/js_2/kursach3/templates/cart.html
+++ b/js_2/kursach3/templates/cart.html
@@ -3,23 +3,31 @@
     <h3 class="text-center">({{$root.cart.length}}) products in cart</h3>
     
     <div class="d-flex flex-wrap justify-content-around mt-5">
-        <table class="table">
-            <thead>
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">Image</th>
-                <th scope="col">Name</th>
-                <th scope="col">Price</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr v-for="(product,idx) in $root.order">
-                <th scope="row">{{idx+1}}</th>
-                <td><img :src="product.url" height="100" alt=""></td>
-                <td>{{product.name}}</td>
-                <td>{{product.price}}</td>
-              </tr>
-            </tbody>
-          </table>
+      <table class="table table-striped table-hover">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Image</th>
+            <th scope="col">Name</th>
+            <th scope="col">Price</th>
+            <th scope="col">Count</th>
+            <th scope="col"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr v-for="(product, idx) in $root.orderedProducts">
+            <th scope="row">{{ idx + 1 }}</th>
+            <td class="text-center">
+              <img :src="product.url" height="120">
+            </td>
+            <td>{{product.name}}</td>
+            <td>{{product.price}}</td>
+            <td>{{product.count}}</td>
+            <td>
+              <button class="btn btn-sm btn-danger">Remove</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 </div>
