--- a/js_2/kursach3/templates/cart.html
+++ b/js_2/kursach3/templates/cart.html
@@ -5,7 +5,7 @@
     <div class="d-flex flex-wrap justify-content-around mt-5">
       <table class="table table-striped table-hover">
         <thead>
-          <tr>
+          <tr class="text-center">
             <th scope="col">#</th>
             <th scope="col">Image</th>
             <th scope="col">Name</th>
@@ -15,14 +15,20 @@
           </tr>
         </thead>
         <tbody>
-          <tr v-for="(product, idx) in $root.orderedProducts">
+          <tr v-for="(product, idx) in $root.orderedProducts" class="text-center">
             <th scope="row">{{ idx + 1 }}</th>
             <td class="text-center">
               <img :src="product.url" height="120">
             </td>
             <td>{{product.name}}</td>
-            <td>{{product.price}}</td>
-            <td>{{product.count}}</td>
+            <td>{{product.price * product.count}}</td>
+            <td>
+              <button class="btn btn-light mr-1"
+                @click="product.count > 1 ? product.count-- : null;countOrderPrice()"><b>-</b></button>
+              {{product.count}}
+              <button class="btn btn-light ml-1" 
+                @click="product.count++;countOrderPrice()"><b>+</b></button>
+            </td>
             <td>
               <button 
                 class="btn btn-sm btn-danger" 
@@ -33,4 +39,20 @@
         </tbody>
       </table>
     </div>
+
+    <div class="row" v-if="$root.newOrder.order.sum > 0">
+      <div class="col-4">
+        {{$root.newOrder.user.displayName}}<br/>
+        {{$root.newOrder.user.email}}
+      </div>
+      <div class="col-4">
+        <h3>Total price: ${{$root.newOrder.order.sum}}</h3>
+      </div>
+      <div class="col-4">
+        <div class="d-flex justify-content-end">
+          <button class="btn btn-outline-primary" >Submit order</button>
+        </div>
+      </div>
+    </div>
+
 </div>
