--- a/js_2/t15/done/templates/products.html
+++ b/js_2/t15/done/templates/products.html
@@ -1,6 +1,6 @@
 <div class="products">
-<div class="products">
     <div class="products_header">
         <h1>Products</h1>
     </div>
 </div>
+<p v-for="product in $root.products">{{product.name}}</p>
