--- a/js_2/t16/done/templates/login.html
+++ b/js_2/t16/done/templates/login.html
@@ -4,8 +4,16 @@
             <div class="col-12 mt-5">
                 <div class="row">
                     <div class="col-12 mb-3">
+                        <label class="form-label">Name</label>
+                        <input type="text" class="form-control form-control-lg" v-model="$root.newUser.name">
+                    </div>
+                    <div class="col-12 mb-3">
+                        <label class="form-label">Last name</label>
+                        <input type="text" class="form-control form-control-lg" v-model="$root.newUser.lastName">
+                    </div>
+                    <div class="col-12 mb-3">
                         <label class="form-label">Email</label>
-                        <input type="email" class="form-control form-control-lg" placeholder="name@example.com" v-model="$root.newUser.email">
+                        <input type="email" class="form-control form-control-lg" v-model="$root.newUser.email">
                     </div>
                     <div class="col-12 mb-3">
                         <label class="form-label">Password</label>
