--- a/js_2/t16/done/templates/login.html
+++ b/js_2/t16/done/templates/login.html
@@ -3,11 +3,11 @@
         <div class="row">
             <div class="col-12 mt-5">
                 <div class="row">
-                    <div class="col-12 mb-3">
+                    <div class="col-12 mb-3" v-if="$root.loginNew">
                         <label class="form-label">Name</label>
                         <input type="text" class="form-control form-control-lg" v-model="$root.newUser.name">
                     </div>
-                    <div class="col-12 mb-3">
+                    <div class="col-12 mb-3" v-if="$root.loginNew">
                         <label class="form-label">Last name</label>
                         <input type="text" class="form-control form-control-lg" v-model="$root.newUser.lastName">
                     </div>
@@ -19,10 +19,18 @@
                         <label class="form-label">Password</label>
                         <input type="password" class="form-control form-control-lg" v-model="$root.newUser.password">
                     </div>
-                    <div class="col-12">
-                        <button class="btn btn-lg btn-primary text-center w-100" @click="emailAuth">
+                    <div class="col-12" v-if="$root.loginNew">
+                        <button class="btn btn-lg btn-primary text-center w-100" @click="emailSignUp">
                             Sign Up
                         </button>
+                    </div>
+                    <div class="col-12" v-if="!$root.loginNew">
+                        <button class="btn btn-lg btn-primary text-center w-100" @click="emailSignIn">
+                            Sign In
+                        </button>
+                    </div>
+                    <div class="col-12 mt-3">
+                        <p class="switch-login" @click="$root.loginNew = !$root.loginNew">{{ $root.loginNew ? "I already have an account." : "I'm new to this site."}}</p>
                     </div>
                 </div>
             </div>
